--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BookFinder">
-
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.BookPartialInformationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.BookFinder.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
